<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/category_author">
        <Preference
            android:key="author"
            android:title="Pavel Sikun"
            android:summary="@string/credits_author_summary"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_source_code">
        <Preference
            android:key="github_origin"
            android:title="SELinux Mode Changer"
            android:summary="https://github.com/mrbimc/SELinuxModeChanger"/>
        <Preference
            android:key="github_viper_core"
            android:title="@string/app_name"
            android:summary="https://github.com/Phonedolly/project_luna_fx"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_licences">
        <Preference
            android:key="gpl3"
            android:title="@string/app_name"
            android:summary="@string/gpl3"/>
        <Preference
            android:key="rootshell"
            android:title="RootTools"
            android:summary="@string/gpl2"/>
        <Preference
            android:key="apache2"
            android:title="AndroidAppCompat"
            android:summary="@string/apache2"/>
    </PreferenceCategory>

</PreferenceScreen>
